--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,7 @@ steps:
       - echo building...
       - echo "$DOCKER-HUB-USERNAME"
       - echo "$DOCKER-HUB-PASSWORD"
+      - sh make.sh
     when:
       branch:
         - master
