--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,3 +15,5 @@ jobs:
         run: |      
           git clone https://damoncoo:${{ secrets.PAT }}@github.com/damoncoo/certs.git --depth 1 --branch master
           ls 
+          pushd certs/ios
+          sh install.sh
